* Palette class:
  * Grayscale256 method: improving grayscale mapping when working in the linear color space
  + Grayscale16/Grayscale4 methods: special linear color space handling even if directMapping is true
* BitmapDataFactory class:
  * Improving grayscale conversion for the known grayscale pixel format when working in the linear color space


~~~~~~~~~
! v7.1.0:
~~~~~~~~~

! KGySoft.Drawing.Imaging namespace
===================================
! IBitmapData interface:
  ! New WorkingColorSpace property. Not a breaking change when targeting at least .NET Core 3.0/.NET Standard 2.1
    where this property has a default implementation and returns WorkingColorSpace.Default.
! IQuantizingSession interface:
  ! New WorkingColorSpace property. Not a breaking change when targeting at least .NET Core 3.0/.NET Standard
    2.1 where this property has a default implementation and returns WorkingColorSpace.Default.
! Palette class:
  ! The constructors with Func<Color32, int> parameters are now obsolete. These overloads have no default parameters
    anymore so if you didn't use the old customGetNearestColorIndex parameter, then automatically the new overloads
    are called if you recompile your code.
  + New constructor overloads with IEnumerable<Color32> parameter instead of an array.
  + New constructor and factory method overloads with workingColorSpace parameters.
  + New WorkingColorSpace property.
  - The constructor with Color32[] parameter just used to store the specified array. This made possible to corrupt
    the palette if the array elements were changed after creating the palette. From now on the elements are copied
    into a new storage.
! RandomNoiseDitherer:
  ! New constructor overload. Marked as a breaking change because if an integer constant literal was passed to the
    strength parameter the compiler may say the call is ambiguous between float and AutoStrengthMode enum.
! InterleavedGradientNoiseDitherer: