@@ -2766,9 +2766,10 @@ namespace KGySoft.Drawing.Imaging
                 // here we need to pick a quantizer for the dithering
                 int bpp = pixelFormat.ToBitsPerPixel();
                 Color32[] paletteEntries = source.Palette?.Entries ?? Reflector.EmptyArray<Color32>();
-                quantizer = bpp <= 8 && paletteEntries.Length > 0 && paletteEntries.Length <= (1 << bpp)
-                    ? PredefinedColorsQuantizer.FromCustomPalette(source.Palette!)
-                    : PredefinedColorsQuantizer.FromPixelFormat(pixelFormat);
+                quantizer = (bpp <= 8 && paletteEntries.Length > 0 && paletteEntries.Length <= (1 << bpp)
+                        ? PredefinedColorsQuantizer.FromCustomPalette(source.Palette!)
+                        : PredefinedColorsQuantizer.FromPixelFormat(pixelFormat, source.BackColor, source.AlphaThreshold))
+                    .ConfigureColorSpace(source.GetPreferredColorSpaceOrDefault());
             }
 
             var session = new CopySession(context);
